force-app/main/default/objects/Notification__c/fields/Customer_Master__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Master</label>
    <referenceTo>Customer_Master__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>