force-app/main/default/objects/Notification__c/fields/Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Follow_up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow up</label>
    <referenceTo>Follow_up__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>