force-app/main/default/objects/Notification__c/fields/Notification_Redirect_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Redirect_Id__c</fullName>
    <label>Notification Redirect Id</label>
    <length>220</length>
    <type>Text</type>
</CustomField>