force-app/main/default/objects/Notification__c/fields/Payment_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Line Item</label>
    <referenceTo>Payment_Line_Item__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>