force-app/main/default/objects/Notification__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>