force-app/main/default/objects/Notification__c/fields/Updated_Status__c.field-meta.xml
<CustomField>
    <fullName>Updated_Status__c</fullName>
    <label>Updated Status</label>
    <length>220</length>
    <type>Text</type>
</CustomField>