force-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Updated_Status__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Notification_Heading__c</columns>
    <columns>One_signal_Notifcation_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>